# rgbpick

./: README.md  environment.yml  main.py  pyproject.toml  setup.cfg
src/rgbpick/: __init__.py  _app.py  _main_window.py  _view_color.py
