[build-system]
requires = ['setuptools>=68.2']
build-backend = 'setuptools.build_meta'


[project]
name = "rgbpick"
version = "0.1.0"
authors = [
    { name = "Asger Jon Vistisen", email = "asgerjon2@gmail.com" },
]
description = "Easy tool for testing deployment and picking colors."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AsgerJon/rgbpick"
"Bug Tracker" = "https://github.com/AsgerJon/rgbpick"
