[metadata]
name = rgbpick
version = 0.1.0
author = Asger Jon Vistisen
author_email = asgerjon2@gmail.com
description = Easy tool for testing deployment and picking colors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AsgerJon/rgbpick
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
[options.packages.find]
where = src
[options.package_data]
* = *.png
